--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
   <head>
+		<base href="/" />
     <title>Angular 2 QuickStart</title>
 
     <!-- 1. Load libraries -->
@@ -8,8 +9,8 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+    <script src="node_modules/angular2/bundles/router.dev.js"></script>
     <script src="node_modules/angular2/bundles/http.js"></script>
-    <script srt="node_modules/angular2/bundles/router.dev.js"></script>
     <!-- 2. Configure SystemJS -->
     <script>
       System.config({
@@ -28,7 +29,7 @@
   <!-- 3. Display the application -->
 
   <body>
-    <my-app></my-app>
+    <app-wrapper></app-wrapper>
   </body>
 
 </html>
